--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,12 @@
 		<artifactId>logback-classic</artifactId>
 		<version>1.2.2</version>
 	</dependency>
+	<dependency>
+		<groupId>com.github.stefanbirkner</groupId>
+		<artifactId>system-rules</artifactId>
+		<version>1.16.0</version>
+		<scope>test</scope>
+	</dependency>
+	
   </dependencies>
 </project>
